<resources>
    <string name="app_name">N&amp;Garden</string>
    <string name="title_activity_settings">Settings</string>
    <string name="gardens_activity">GardensActivity</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!--My strings-->
    <string name="enter_as_guest">Enter as guest</string>
    <string name="password">Choose a password</string>
    <string name="login">Choose a login</string>
    <string name="sign_in_or_register">Sign in or register</string>
    <string name="sign_out">Sign out</string>
    <string name="settings">Settings</string>
    <string name="menu_sign_in">Sign in</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="you_have_already_an_account_sign_in">You have already an account ?</string>
    <string name="sign_in">Sign in</string>
    <string name="enter_your_e_mail_adress">example@email.ex</string>
    <string name="enter_your_birth_date">Birth date (yyyy-mm-dd)</string>
    <string name="where_are_you_from">Native country</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_login">Forgot login ?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="home_menu_gardens">Gardens</string>
    <string name="home_menu_scan">Scan and learn</string>
    <string name="home_menu_ask_questions">Ask questions</string>
    <string name="home_menu_events_inc">Events incoming</string>
    <string name="home_menu_my_profile">My profile</string>
    <string name="home_menu_prefs">Preferences</string>
    <string name="home_menu_contact_us">Contact-us</string>
    <string name="home_menu_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test">test</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="scannerActivityLabel">Scanner</string>
    <string name="registrationActivityLabel">Registration</string>
    <string name="loginActivityLabel">Login</string>
    <string name="gardensActivityName">The Gardens</string>
    <string name="infosLabelActivity">Informations</string>
    <string name="RequiredForm">Required</string>
    <string name="errorMsgFormatEmail">Respectez le format exemple@ex.com</string>
    <string name="errorMsgFormatBirthdate">Respectez le format yyyy-mm-dd</string>
    <string name="errorMsgFormatPassword">Doit contenir au moins 6 caracteres</string>
    <string name="name_of_the_app_label">Name of the app :</string>
    <string name="descriptionLabel">Description</string>
    <string name="cadre_explanation">Fait dans le cadre du projet SmartCity 2017</string>
    <string name="descr_app"><![CDATA[N&Garden permet aux visiteurs de découvrir les jardins à thème d\'une manière plus dynamique et ludique tout en apprenant des choses sur les éléments qui le composent.]]></string>
    <string name="copyright"><![CDATA[©copyright 2017-2017, N&Gardenis a registered trademark.]]></string>
    <string name="about">About</string>
    <string name="noteGarden">Note :</string>
    <string name="superficieGarden">Superficie :</string>
    <string name="adresseGarden">Adresse :</string>
    <string name="textScanExplain">Scan the qr code near a plant to display his informations</string>
    <string name="cadreLabel">Cadre</string>
    <string name="findUsOnSentence">Vous pouvez nous retrouver sur ces différents réseaux sociaux :</string>
    <string name="facebookLabel">Facebook :</string>
    <string name="facebookLink">https://www.facebook.com/Animaland-379469422498868/</string>
    <string name="twitterLabel">Twitter :</string>
    <string name="twitterLink">https://twitter.com/_AnimaLanD</string>
    <string name="mailLabel">Ou nous contacter par mail via :</string>
    <string name="mailAdr">example@email.ext</string>
    <string name="user_name_label">User name :</string>
    <string name="userSexLabel">Sex :</string>
    <string name="user_email_adress_label">Email adress :</string>
    <string name="user_origin_country_label">Origin country :</string>
    <string name="user_birth_date_label">Birth date :</string>
    <string name="connection_toast">You must be connected to see this page</string>
    <string name="profileActivityName">Profile</string>
    <string name="registerFailed">Register failed</string>
    <string name="connectionError">Error while connecting</string>
    <string name="registerSuccessful">Register successful ! Connect now…</string>
    <string name="errorsInFormEncountered">Errors encountered</string>
    <string name="dateStartEventLabel">Aura lieu à partir du</string>
    <string name="auEventTimeLabel">jusqu\'au</string>
    <string name="moreInfosEventLabel">Plus d\'infos sur le site ci dessous :</string>
    <string name="errorCheckingUser">Error occurred while attempting to authenticate</string>
    <string name="errorMissInternetCo">Vous n\'êtes pas connecté à internet</string>
    <string name="connectionMessage">Vous devez être connecté pour accéder à ce contenu.</string>
</resources>
