<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.henallux.smartcity.View.RegisterActivity">

    <EditText
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="92dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Login" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="Password"
        android:layout_below="@+id/login"
        android:layout_alignStart="@+id/login" />

    <Button
        android:id="@+id/log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:layout_below="@+id/password"
        android:layout_alignEnd="@+id/password"
        android:layout_marginTop="87dp" />

    <CheckBox
        android:id="@+id/rememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:layout_below="@+id/password"
        android:layout_alignStart="@+id/password"
        android:layout_marginTop="10dp" />

    <!--Basic functionalities to implement for the users relative to the password and username forgivable-->
    <!--<TextView
        android:id="@+id/loginForget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_login"
        android:layout_below="@+id/rememberMe"
        android:layout_alignStart="@+id/rememberMe"
        android:layout_marginTop="14dp" />

    <TextView
        android:id="@+id/passwordForget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:layout_below="@+id/loginForget"
        android:layout_alignStart="@+id/loginForget" />-->

    <TextView
        android:id="@+id/isRegistered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_registered_yet"
        android:layout_marginStart="17dp"
        android:layout_marginBottom="35dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/password" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/wallet_holo_blue_light"
        android:layout_alignBaseline="@+id/isRegistered"
        android:layout_alignBottom="@+id/isRegistered"
        android:layout_toEndOf="@+id/isRegistered"
        android:layout_marginStart="8dp" />
</RelativeLayout>