<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.henallux.smartcity.Controller.GardensInformationActivity">


    <ImageView
        android:id="@+id/mainPic"
        android:layout_width="110dp"
        android:layout_height="140dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="13dp" />

    <TextView
        android:id="@+id/nameGarden"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_alignTop="@+id/mainPic"
        android:layout_marginStart="22dp"
        android:layout_toEndOf="@+id/mainPic"
        android:ems="10"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/noteLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noteGarden"
        android:layout_below="@+id/nameGarden"
        android:layout_alignStart="@+id/nameGarden" />

    <TextView
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameGarden"
        android:layout_toEndOf="@+id/superficieLabel"
        android:layout_marginStart="25dp" />

    <TextView
        android:id="@+id/superficieLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/superficieGarden"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/noteLabel"
        android:layout_alignStart="@+id/noteLabel" />

    <TextView
        android:id="@+id/superficie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/superficieLabel"
        android:layout_alignBottom="@+id/superficieLabel"
        android:layout_alignStart="@+id/note" />

    <TextView
        android:id="@+id/adressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adresseGarden"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/superficieLabel"
        android:layout_alignStart="@+id/superficieLabel" />

    <TextView
        android:id="@+id/adress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/adressLabel"
        android:layout_alignBottom="@+id/adressLabel"
        android:layout_alignStart="@+id/superficie" />

    <Button
        android:id="@+id/audioGuidBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:foreground="@drawable/ic_volume_off_black_24dp"
        android:layout_alignBottom="@+id/nameGarden"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp" />

    <TextView
        android:id="@+id/descrLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/descriptionLabel"
        android:textSize="20sp"
        android:layout_below="@+id/mainPic"
        android:layout_alignStart="@+id/mainPic" />

    <TextView
        android:id="@+id/descr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/descrLabel"
        android:layout_alignStart="@+id/descrLabel" />

</RelativeLayout>
